--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-config-google": "^0.10.0",
     "http-server": "^0.11.1",
     "npmsrcify": "0.0.2",
+    "pixi.js": "^4.8.2",
     "rollup": "^0.64.1",
     "rollup-plugin-babel": "^4.0.3",
     "standard-version": "^4.3.0"
